--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="fundo";">
-        <h3>Curso</h3>
-        <h1>HTML5 e CSS3</h1>
-        <h3>Criação de Websites</h3>
-        <h2 class="subtitulo">INÍCIO 19/09 (PRÓXIMO SÁBADO)</h2>
+        <h3 class="subtitulo">CURSO</h3>
+        <h1 class="titulo">HTML e CSS3</h1>
+        <h3 class="subtitulo">Criação de Websites</h3>
+        <h2 class="destaque">INÍCIO 19/09 (PRÓXIMO SÁBADO)</h2>
         <p>
             <a href="#" class="botao">SAIBA MAIS</a>
         </p>
